--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,51 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
+  background-color: #1a1a1a;
   color: #333;
+  position: relative; /* Add this */
+  min-height: 100vh; /* Add this */
+  overflow: hidden; /* Add this line */
 }
 
 .app {
   max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
+  position: absolute;
+  top: 50%; /* Position the container halfway down */
+  left: 50%; /* Position the container halfway across */
+  transform: translate(-50%, -50%) scale(1.6); /* Center the container based on its own size */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh; /* Ensure the container takes full viewport height */
+
+}
+
+
+.transform-btn {
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: background-color 0.3s ease;
+  left: 50%;
+  top: 50%;
+  border-bottom: 1px solid #ddd;
+}
+
+.box {
+  margin-top: -30px;
+  width: 300px;
+  height: 100px;
+  background-color: #F9F9FF;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  border-bottom: 1px solid #ddd;
 }
 
 .header {
@@ -21,7 +58,7 @@ body {
 .header h1 {
   margin: 0;
   font-size: 2.5rem;
-  color: #4a90e2;
+  color: #181818;
 }
 
 .header p {
